2005-10-17  David Schleef  <ds@schleef.org>

	* plugin/plugin.c: Update message.

2005-10-16  Eric Anholt  <anholt@FreeBSD.org>

	* libswfdec/Makefile.am:
	* libswfdec/actions_builtin.c:
	* libswfdec/actions_tags.c:
	* libswfdec/swf.c:
	* libswfdec/swfdec_audio.c:
	* libswfdec/swfdec_bits.c:
	* libswfdec/swfdec_debug.h:
	* libswfdec/swfdec_object.c:
	* libswfdec/swfdec_shape.c:
	* libswfdec/swfdec_sound.c:
	Minor cleanups exposed by sparse: mark several things static, add
	a prototype for another, and add descriptions for some MB actions.  Fix
	a broken include path that sparse choked on.

2005-10-16  Eric Anholt  <anholt@FreeBSD.org>

	* libswfdec/actions_tags.c: (action_push):
	Fix a memory leak in string pushes.

2005-10-10  David Schleef  <ds@schleef.org>

	* libswfdec/jpeg/huffman.c: (huffman_table_decode_macroblock):
	* libswfdec/jpeg/jpeg.c: (generate_code_table):
	* libswfdec/jpeg/jpeg_debug.h: Turn off JPEG debugging.

2005-08-29  Eric Anholt  <anholt@FreeBSD.org>

	* libswfdec/actions_builtin.c: (movieclip_new):
	Fix another GC breakage in movieclip rooting.  Roots are added as
	pointers to gc-things (where a gc-thing is a pointer to a JS_object,
	jdouble, etc.).  However, the pointer-to-gcthing must remain valid until
	JS_RemoveRoot, while we were passing a pointer to a stack variable.
	Many thanks to Brendan Eich (spidermonkey developer) for giving me the
	pointer on how to fix it.

2005-08-29  Eric Anholt  <anholt@FreeBSD.org>

	* libswfdec/actions.c: (swfdec_init_context):
	* libswfdec/actions_builtin.c: (action_register_sprite_seg):
	* libswfdec/swfdec_actions.h:
	Expand the scope of GC debugging, exposing a new issue quickly.

2005-08-29  Eric Anholt  <anholt@FreeBSD.org>

	* libswfdec/actions_builtin.c: (swfdec_init_context_builtins):
	Don't forget to initialize the jsval when setting _root.  Fixes a GC
	crash, at a minimum.

2005-08-27  Eric Anholt  <anholt@FreeBSD.org>

	* libswfdec/actions.c: (swfdec_init_context), (action_script_call),